# oxIDIZER

./: .gitignore  AGENTS.md  Cargo.toml  NEW_FEATURE.md  PROJECT_INFO.md  ProcessingPhases.md  README.md  TODO.md  ai_info.md  ai_information.txt  ai_tests.txt  all_modules.txt  build_errors.txt  build_output.txt  buildattempt.txt  crash_log.txt  crop_logo.py  debug_test.txt  diagram_spec.py  extract_color.py  failing_modules.txt  form_output.html  funcmods.txt  module_return.txt  module_test_negative.txt  module_test_specific.txt  module_to_test.txt  modules-functional_test.txt  modules-functional_tests.txt  modules-temp.txt  modules-verify.txt  modules.txt  modules_to_test.txt  mx_debug.pid  my_modules_to_test.txt  ox_content error.yaml  ox_content.yaml  ox_content_error.yaml  ox_webservice.pid  ox_webservice.yaml  (+18 more)
ox_auth_ip/: Cargo.toml
ox_auth_ip/conf/: ip_rules.yaml
ox_auth_ip/src/: lib.rs
ox_content/: Cargo.toml
ox_content/functional_tests/000001-NoConfigProvided/: ox_webservice.yaml  test.sh
ox_content/functional_tests/000002-ConfigNotFound/: ox_webservice.yaml
ox_content/functional_tests/000003-ConfigInvalid/: log4rs.yaml  ox_webservice.yaml  test.sh
ox_content/functional_tests/000004-NoTemplate/: ox_webservice.yaml
ox_content/functional_tests/000005-NoHTML/: ox_content.yaml  ox_webservice.yaml
ox_content/functional_tests/999994-HTMLIndex/: ox_content.yaml  ox_webservice_errorhandler_jinja2.yaml
ox_content/functional_tests/999996-LoggingNotFoundTest/: test.sh
ox_content/functional_tests/999997-LoggingTest/: test.sh
ox_content/functional_tests/999998-NoTemplate/: ox_content.yaml  ox_webservice.yaml  test.sh
ox_content/functional_tests/999999-CleanConfig/: ox_webservice.yaml  test.sh
ox_content/src/: lib.rs
ox_content/src/handlers/: mod.rs  stream_handler.rs  template_handler.rs
ox_data_broker/: Cargo.toml  broker.toml
ox_data_broker/src/: lib.rs
ox_data_broker_server/: Cargo.toml
ox_data_broker_server/src/: main.rs
ox_data_object_manager/: Cargo.toml
ox_data_object_manager/src/: lib.rs
ox_event_bus/: Cargo.toml
ox_event_bus/ox_event_bus_mqtt/: Cargo.toml
ox_event_bus/ox_event_bus_mqtt/src/: lib.rs
ox_event_bus/src/: lib.rs
ox_fileproc/: Cargo.toml  README.md
ox_fileproc/docs/: AI_GUIDE.md  API.md
ox_fileproc/examples/: edit_config.rs  load_config.rs
ox_fileproc/functional_tests/900001-Safety-Fuzz-ProcessContent/: test.sh
ox_fileproc/fuzz/: Cargo.toml
ox_fileproc/src/: cursor.rs  lib.rs  processor.rs  repro_test.rs  smart_merge.rs  substitutor.rs
ox_fileproc/src/scanners/: json.rs  mod.rs  yaml.rs
ox_fileproc/tests/: security_test.rs
ox_forms/: Cargo.toml
ox_forms/examples/: demo.rs
ox_forms/ox_forms_api/: Cargo.toml
ox_forms/ox_forms_client/: Cargo.toml
ox_forms/ox_forms_server/: Cargo.toml
ox_forms/ox_forms_std_renderers/: Cargo.toml
ox_forms/src/: binding.rs  generator.rs  lib.rs  manager.rs  registry.rs  render.rs  schema.rs  tests.rs  traits.rs  validation.rs
ox_locking/: Cargo.toml
ox_locking/src/: lib.rs
ox_messaging_client/: Cargo.toml
ox_messaging_client/ox_messaging_mqtt/: Cargo.toml
ox_messaging_client/src/: lib.rs
ox_messaging_mqtt/: Cargo.toml
ox_messaging_mqtt/src/: lib.rs
ox_package_manager/: Cargo.toml
ox_package_manager/conf/: manager.yaml  ox_package_manager.yaml  stream.yaml
ox_package_manager/src/: lib.rs
ox_persistence/: Cargo.toml
ox_persistence/conf/: drivers.yaml
ox_persistence/ox_persistence_api/: Cargo.toml  config_schema.yaml
ox_persistence/ox_persistence_datastore_drivermanager/: Cargo.toml
ox_persistence/ox_persistence_dictionary_manager/: Cargo.toml
ox_persistence/src/: lib.rs
ox_persistence_api/: Cargo.toml
ox_persistence_api/src/: lib.rs
ox_persistence_datasource_manager/: Cargo.toml  ox_webservice.pid
ox_persistence_datasource_manager/conf/: ox_persistence_datasource_manager.yaml
ox_persistence_datasource_manager/src/: lib.rs
ox_persistence_datastore_mysql/: Cargo.toml
ox_persistence_datastore_mysql/src/: lib.rs
ox_persistence_driver_installer/: Cargo.toml
ox_persistence_driver_installer/conf/: ox_persistence_driver_installer.yaml
ox_persistence_driver_installer/src/: lib.rs
ox_persistence_driver_manager/: Cargo.toml
ox_persistence_driver_manager/conf/: ox_persistence_driver_manager.yaml  ox_persistence_driver_manager_stream.yaml  ox_persistence_driver_manager_stream_wasm.yaml
ox_persistence_driver_manager/fuzz/: Cargo.toml
ox_persistence_driver_manager/ox_persistence_driver_manager_wasm/: Cargo.toml
ox_persistence_driver_manager/src/: functional_tests.rs  functional_tests_security.rs  lib.rs
ox_persistence_flatfile/: Cargo.toml
ox_persistence_flatfile/src/: lib.rs
ox_persistence_gdo_relational/: Cargo.toml
ox_persistence_gdo_relational/src/: lib.rs
ox_persistence_json/: Cargo.toml
ox_persistence_json/src/: lib.rs  main.rs
ox_persistence_mssql/: Cargo.toml
ox_persistence_mssql/src/: lib.rs  main.rs
ox_persistence_postgresql/: Cargo.toml
ox_persistence_postgresql/src/: lib.rs  main.rs
ox_persistence_yaml/: Cargo.toml
ox_persistence_yaml/src/: lib.rs  main.rs
ox_server_info/: Cargo.toml  build.rs
ox_server_info/src/: lib.rs
ox_webservice/: Cargo.toml  ox_webservice.yaml  redirect_rules.yaml
ox_webservice/fuzz/: Cargo.toml
ox_webservice/src/: lib.rs  main.rs  pipeline.rs
ox_webservice/templates/: test.html
ox_webservice/tests/: config_loader.rs  dynamic_loading.rs  ffi_safety.rs
ox_webservice_errorhandler/: Cargo.toml
ox_webservice_errorhandler/src/: lib.rs
ox_webservice_errorhandler_jinja2/: Cargo.toml
ox_webservice_errorhandler_jinja2/conf/: errorhandler_jinja2.yaml  ox_webservice_errorhandler_jinja2.yaml
ox_webservice_errorhandler_jinja2/fuzz/: Cargo.toml
ox_webservice_errorhandler_jinja2/src/: lib.rs  tests.rs
ox_webservice_errorhandler_jinja2/tests/: ffi.rs
ox_webservice_errorhandler_json/: Cargo.toml
ox_webservice_errorhandler_json/conf/: ox_webservice_errorhandler_json.yaml
ox_webservice_errorhandler_json/src/: lib.rs
(+2269 files in other folders)
