[workspace]
resolver = "2"
members = [
    # workflow
    "crates/workflow/ox_workflow_abi",
    "crates/workflow/ox_workflow_core",
    "crates/workflow/ox_workflow_config",
    "crates/workflow/ox_workflow_executor",
    "crates/workflow/ox_workflow_storage",
    "crates/workflow/ox_workflow_api",
    "crates/workflow/ox_workflow_scheduler",

    # Event bus & messaging
    "crates/messaging/ox_event_bus",
    "crates/messaging/ox_messaging_client",
    "crates/messaging/ox_messaging_mqtt",

    # Core utilities
    "ox_type_converter",

    # util
    "crates/util/ox_callback_manager",
    "crates/util/ox_fileproc",
    "crates/util/ox_package_manager",

    # Webservice host and API
    "ox_webservice",
    "ox_webservice_api",
    "ox_webservice_router",
    "ox_webservice_test_utils",

    # Plugins - auth/security
    "ox_auth_ip",
    "ox_webservice_forwarded_for",
    "ox_webservice_restore_ip",

    # Plugins - error handling
    "ox_webservice_errorhandler_jinja2",
    "ox_webservice_errorhandler_json",

    # Plugins - routing/rewriting
    "ox_webservice_redirect",
    "ox_webservice_rewrite",

    # Plugins - content serving
    "ox_webservice_stream",
    "ox_webservice_template_jinja2",

    # Plugins - response manipulation
    "ox_webservice_ping",
    "ox_webservice_status",
    "ox_webservice_vary_header",
    "ox_webservice_wsgi",

    # Data / persistence
    "ox_data_broker",
    "ox_persistence",
    "ox_persistence_datasource_manager",
    "ox_persistence_driver_installer",
    "ox_persistence_driver_manager",

    # ox_cc - client configuration management
    "ox_cc/crates/ox_cc_common",
    "ox_cc/crates/ox_cc_broker_plugin",
    "ox_cc/crates/ox_cc_manifest_plugin",
    "ox_cc/crates/ox_cc_report_plugin",
    "ox_cc/crates/ox_cc_admin_plugin",
    "ox_cc/crates/ox_cc_client",
    "ox_cc/crates/ox_cc_keygen",
    "ox_cc/crates/ox_cc_executor",
]
