[workspace]
resolver = "2"
members = [
    # workflow
    "crates/workflow/ox_workflow_abi",
    "crates/workflow/ox_workflow_core",
    "crates/workflow/ox_workflow_config",
    "crates/workflow/ox_workflow_executor",
    "crates/workflow/ox_workflow_storage",
    "crates/workflow/ox_workflow_api",
    "crates/workflow/ox_workflow_scheduler",

    # Event bus & messaging
    "crates/messaging/ox_event_bus",
    "crates/messaging/ox_event_bus/ox_event_bus_mqtt",
    "crates/messaging/ox_messaging_client",
    "crates/messaging/ox_messaging_mqtt",

    # util
    "crates/util/ox_callback_manager",
    "crates/util/ox_fileproc",
    "crates/util/ox_package_manager",

    # Webservice host and API
    "crates/webservice/ox_webservice",
    "crates/webservice/ox_webservice_api",
    "crates/webservice/ox_webservice_router",
    "crates/webservice/ox_webservice_test_utils",

    # Plugins - auth/security
    "crates/webservice/ox_auth_ip",
    "crates/webservice/ox_webservice_forwarded_for",
    "crates/webservice/ox_webservice_restore_ip",

    # Plugins - error handling
    "crates/webservice/ox_webservice_errorhandler_jinja2",
    "crates/webservice/ox_webservice_errorhandler_json",

    # Plugins - routing/rewriting
    "crates/webservice/ox_webservice_redirect",
    "crates/webservice/ox_webservice_rewrite",

    # Plugins - content serving
    "crates/webservice/ox_webservice_stream",
    "crates/webservice/ox_webservice_template_jinja2",

    # Plugins - response manipulation
    "crates/webservice/ox_webservice_ping",
    "crates/webservice/ox_webservice_status",
    "crates/webservice/ox_webservice_vary_header",
    "crates/webservice/ox_webservice_wsgi",

    # forms
    "crates/forms/ox_forms",
    "crates/forms/ox_forms_api",
    "crates/forms/ox_forms_client",
    "crates/forms/ox_forms_server",
    "crates/forms/ox_forms_std_renderers",

    # data
    "crates/data/ox_data_error",
    "crates/data/ox_data_object",
    "crates/data/ox_data_object/ox_data_object_dictionary_manager",
    "crates/data/ox_data_object/ox_data_object_manager",
    "crates/data/ox_data_broker",
    "crates/data/ox_transaction",
    "crates/data/ox_type_converter",
    "crates/data/ox_persistence",
    "crates/data/ox_persistence/ox_persistence_api",
    "crates/data/ox_persistence/ox_persistence_dictionary_manager",
    "crates/data/ox_persistence/drivers/db/ox_persistence_driver_db_sql",
    "crates/data/ox_persistence/drivers/db/ox_persistence_driver_db_sqlite",
    "crates/data/ox_persistence/drivers/db/ox_persistence_driver_db_postgres",
    "crates/data/ox_persistence/drivers/db/ox_persistence_driver_db_mysql",
    "crates/data/ox_persistence/drivers/db/ox_persistence_driver_db_mssql",
    "crates/data/ox_persistence/drivers/file/ox_persistence_driver_file_json",
    "crates/data/ox_persistence/drivers/file/ox_persistence_driver_file_yaml",
    "crates/data/ox_persistence/drivers/file/ox_persistence_driver_file_xml",
    "crates/data/ox_persistence/drivers/file/ox_persistence_driver_file_delimited",
    "crates/data/ox_persistence_datasource_manager",
    "crates/data/ox_persistence_driver_installer",
    "crates/data/ox_persistence_driver_manager",
    "crates/data/ox_persistence_gdo_relational",

    # cc
    "crates/cc/ox_cc_common",
    "crates/cc/ox_cc_broker_plugin",
    "crates/cc/ox_cc_manifest_plugin",
    "crates/cc/ox_cc_report_plugin",
    "crates/cc/ox_cc_admin_plugin",
    "crates/cc/ox_cc_client",
    "crates/cc/ox_cc_keygen",
    "crates/cc/ox_cc_executor", "crates/data/ox_validation",

    # cert
    "crates/cert/ox_cert_core",
    "crates/cert/ox_cert_issue_lib",
    "crates/cert/ox_cert_ca_init",
    "crates/cert/ox_cert_issue",
    "crates/cert/ox_cert_revoke",
    "crates/cert/ox_cert_health",
    "crates/cert/ox_cert_renew",
    "crates/cert/ox_cert_webhook",
    "crates/cert/ox_cert_ra",
    "crates/cert/ox_cert_admin",
    "crates/cert/ox_cert_notify",
    "crates/cert/ox_cert_p12",
    "crates/cert/ox_cert_crl",
    "crates/cert/ox_cert_ocsp",
    "crates/cert/ox_cert_ssh",
    "crates/cert/ox_cert_acme",
    "crates/cert/ox_cert_est",
    "crates/data/ox_data_error",
]
