[package]
name = "ox_auth_ip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_pipeline_plugin = { path = "../ox_pipeline/ox_pipeline_plugin" }
ox_webservice_api = { path = "../ox_webservice_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
ipnetwork = "0.20"
axum = "0.7"
ox_fileproc = { path = "../ox_fileproc" }
