[package]
name = "ox_auth_ip"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_workflow_abi = { path = "../crates/workflow/ox_workflow_abi" }
ox_webservice_api = { path = "../ox_webservice_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
ipnetwork = "0.20"
axum = "0.7"
ox_fileproc = { path = "../crates/util/ox_fileproc" }
