[package]
name = "ox_content"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ox_webservice_api = { path = "../ox_webservice_api" }
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
