[package]
name = "ox_data_broker"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[lib]

crate-type = ["cdylib"]



[dependencies]

axum = "0.7"

tokio = { version = "1.36", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
libc = "0.2"
serde_yaml = "0.9"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde-xml-rs = "0.6"
notify = "6.0"

ox_persistence = { path = "../ox_persistence" }
ox_persistence_api = { path = "../ox_persistence/ox_persistence_api" }
ox_persistence_gdo_relational = { path = "../ox_persistence_gdo_relational" }
ox_locking = { path = "../ox_locking" }

ox_webservice_api = { path = "../ox_webservice_api" }
ox_fileproc = { path = "../ox_fileproc" }
bumpalo = "3.19.0"

