[package]
name = "ox_data_object_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ox_data_object = { path = "../ox_data_object" }
ox_callback_manager = { path = "../ox_callback_manager" }
ox_type_converter = { path = "../ox_type_converter" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
