[package]
name = "ox_fileproc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
quick-xml = { version = "0.38.4", features = ["serde", "serialize"] }
json5 = "1.2.0"
kdl = "6.5.0"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.23.0"
