[package]
name = "ox_fileproc"
version = "0.1.0"
edition = "2024"
description = "Recursive configuration loading, variable substitution, and surgical structure-aware file editing."
license = "GPL-3.0-only"
repository = "https://github.com/justlikeef/oxFileproc"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
log = "0.4"
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
quick-xml = { version = "0.38.4", features = ["serde", "serialize"] }
json5 = "1.2.0"
kdl = "6.5.0"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.23.0"
