[package]
name = "ox_forms"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
libloading = "0.8"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }

[features]
default = []
ssr = []
wasm = []
