[package]
name = "ox_forms"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
libloading = "0.8"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
ox_data_object = { path = "../ox_data_object" }
ox_type_converter = { path = "../ox_type_converter" }
ox_data_object_manager = { path = "../ox_data_object/ox_data_object_manager" }
regex = "1.11"
ox_webservice_api = { version = "0.0.1", path = "../ox_webservice_api" }
libc = "0.2.180"

[features]
default = []
ssr = []
wasm = []
