[package]
name = "ox_messaging_client"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ox_event_bus = { path = "../ox_event_bus" }
ox_event_bus_mqtt = { path = "../ox_event_bus/ox_event_bus_mqtt" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
env_logger = "0.10"
