[package]
name = "ox_messaging_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ox_event_bus = { path = "../ox_event_bus" }
ox_event_bus_mqtt = { path = "../ox_event_bus/ox_event_bus_mqtt" }
ox_workflow_config = { path = "../crates/workflow/ox_workflow_config" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.10", features = ["v4"] }
tokio = { version = "1.0", features = ["full", "sync"] }
log = "0.4"
