[package]
name = "ox_messaging_mqtt"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rumqttd = "0.17"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ox_fileproc = { path = "../crates/util/ox_fileproc" }
toml = "0.5"
ox_workflow_abi = { path = "../crates/workflow/ox_workflow_abi" }
ox_event_bus = { path = "../ox_event_bus" }
log = "0.4"
