[package]
name = "ox_persistence"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ox_data_object = { path = "../ox_data_object" }
ox_type_converter = { path = "../ox_type_converter" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"