[package]
name = "ox_persistence_api"
version = "0.1.0"
edition = "2021"

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_locking = { path = "../ox_locking" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # For making API calls
tokio = { version = "1", features = ["full"] } # For async operations
