[package]
name = "ox_persistence_datasource_manager"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
lazy_static = "1.4"
bumpalo = "3.16"

ox_webservice_api = { path = "../ox_webservice_api" }
ox_pipeline_plugin = { path = "../ox_pipeline/ox_pipeline_plugin" }
ox_fileproc = { path = "../ox_fileproc" }
ox_persistence = { path = "../ox_persistence" }
