[package]
name = "ox_persistence_driver_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
ox_webservice_api = { path = "../ox_webservice_api" }
ox_persistence = { path = "../ox_persistence" }
ox_fileproc = { path = "../ox_fileproc" }
ox_pipeline_plugin = { path = "../ox_pipeline/ox_pipeline_plugin" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.3"
lazy_static = "1.4"
bumpalo = "3.12"
libc = "0.2"

[lib]
crate-type = ["cdylib"]
