[package]
name = "ox_persistence_driver_installer"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_fileproc = { path = "../crates/util/ox_fileproc" }
ox_workflow_abi = { path = "../ox_workflow_abi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.3"
lazy_static = "1.4"
libc = "0.2"

[lib]
crate-type = ["cdylib"]
