[package]
name = "ox_persistence_driver_manager"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
libloading = "0.8"
libc = "0.2"
walkdir = "2.4"
regex = "1.10"

ox_webservice_api = { path = "../ox_webservice_api" }
ox_pipeline_plugin = { path = "../ox_pipeline/ox_pipeline_plugin" }
ox_fileproc = { path = "../ox_fileproc" }
ox_persistence = { path = "../ox_persistence" }
lazy_static = "1.4"
bumpalo = "3.16"

[dev-dependencies]
ox_webservice_test_utils = { path = "../ox_webservice_test_utils" }
ox_webservice_api = { path = "../ox_webservice_api" }
