[package]
name = "ox_persistence_gdo_relational"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_data_object = { path = "../ox_data_object" }
ox_type_converter = { path = "../ox_type_converter" }
ox_locking = { path = "../ox_locking" }
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
bumpalo = "3.19.0"
