[package]
name = "ox_persistence_mssql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_locking = { path = "../ox_locking" }
ox_persistence_sql = { path = "../ox_persistence_sql" }


ox_data_object = { path = "../ox_data_object" }
ox_type_converter = { path = "../ox_type_converter" }
tiberius = "0.12" # Placeholder for mssql client
tokio = { version = "1", features = ["full"] } # For async operations
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
bumpalo = "3.19.0"
