[package]
name = "ox_persistence_postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_locking = { path = "../ox_locking" }
ox_persistence_sql = { path = "../ox_persistence_sql" }
ox_data_object = { path = "../" }
ox_type_converter = { path = "../ox_type_converter" }
postgres = "0.19"
