[package]
name = "ox_persistence_postgresql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_locking = { path = "../ox_locking" }
ox_persistence_sql = { path = "../ox_persistence_sql" }


ox_data_object = { path = "../" }
ox_type_converter = { path = "../ox_type_converter" }
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
