[package]
name = "ox_persistence_yaml"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ox_persistence = { path = "../ox_persistence" }
ox_locking = { path = "../ox_locking" }
ox_data_object = { path = "../" }
ox_type_converter = { path = "../ox_type_converter" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
libc = "0.2"
serde_json = "1.0"
