[package]
name = "ox_server_info"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
libloading = "0.8"
ox_webservice = { path = "../ox_webservice" }
libc = "0.2"
log4rs = "1.2.0"
log = "0.4"
ox_webservice_api = { path = "../ox_webservice_api" }
bumpalo = "3.19.0"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "rustc", "si"] }
