[package]
name = "ox_webservice"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[dependencies]
tower = { version = "0.4", features = ["util"] }
axum = "0.7.5"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde-xml-rs = "0.6"
libloading = "0.8"
notify = "6.0"
tera = "1.19"
once_cell = "1.19"
dashmap = "5.5.3"
log = "0.4"
anyhow = "1.0"
env_logger = "0.11.3"
log4rs = "1.2.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
tokio-rustls = "0.26.4"
rustls = "0.23.35"
aws-lc-rs = "1.15.1"
rustls-pemfile = "2.1.2"


libc = "0.2"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }
ox_webservice_api = { path = "../ox_webservice_api" }

sysinfo = "0.30"
regex = "1.10"

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "rustc", "si"] }
