[package]
name = "ox_webservice_errorhandler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
minijinja = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
http = "1.0"
async-trait = "0.1"