[package]
name = "ox_webservice_errorhandler_jinja2"
version = "0.0.1"
edition = "2024"

[lib]
name = "ox_webservice_errorhandler_jinja2"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
ox_webservice_api = { path = "../ox_webservice_api" }
axum = "0.7"
log = "0.4"
tera = "1.19"
anyhow = "1.0"
serde_yaml = "0.9"
regex = "1.10"
bumpalo = "3.19.0"
