[package]
name = "ox_webservice_errorhandler_json"
version = "0.1.0"
edition = "2021"

[dependencies]
ox_webservice_api = { path = "../ox_webservice_api" }
ox_pipeline_plugin = { path = "../ox_pipeline/ox_pipeline_plugin" }
ox_fileproc = { path = "../ox_fileproc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"
axum = "0.7"
libc = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
